<resources>
    <string name="app_name">Sylas.exe</string>
    <string name="sylasname">Sylas of Dregbourne</string>
    <string name="sylas">SYLAS</string>
    <string name="settings">settings</string>
    <string name="ab1">HIJACK</string>
    <string name="ab2">ABSCOND/ABDUCT</string>
    <string name="ab3">KINGSLAYER</string>
    <string name="ab4">CHAIN LASH</string>
    <string name="buildsnruines">Builds and Runes</string>
    <string name="stories">Stories</string>
    <string name="biography">Once I was a prisoner. Like YOU.Locked away by cowards and hypocrites. Left to die for the way I was born.Nothing to live for but vengeance. Nothing to lose but my chains.Yet in the revolution to come, our revolution, these chains will liberate us all.And I will make sure we are never shackled again.</string>
    <string name="bio">“I am no traitor. I am the true Demacia.”</string>
    <string name="shacklestitle">THE SHACKLES OF BELIEF</string>
    <string name="turmoiltitle">TURMOIL</string>
    <string name="recruittitle">THE RECRUIT</string>
    <string name="readsc">READ EXCITING STORIES AND COMICS</string>
    <string name="fanart">FANART</string>
    <string name="extitle">PLAYING AS SYLAS</string>
    <string name="extext">As Sylas, you lash out with merciless magical attacks,Beat down your enemies with repeated Chain Lash,end the oppression with a crushing Kingslayer strike.</string>
    <string name="ab2text">Sylas lunges at a target with a powerful strike, damaging them and healing himself. If the enemy is at low health, the damage is increased; if Sylas is at low health, the heal is increased.</string>
    <string name="ab2dmg">Magic Damage : 70/105/140/175/210 (+90% AP) Heal : 30/60/90/120/150(+50% AP)Max Heal:60/120/180/240/300(+100% AP)Mana : 70/80/90/100/110 Cooldown:13/11.5/10/8.5/7</string>
</resources>