<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4"
    android:background="@color/dark">
    <VideoView
        android:id="@+id/video"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/ab1name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ab3"
        android:textColor="#FFD999"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ab1image"
        android:src="@drawable/ability2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/ab1name"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/ab1text"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:padding="3dp"
        android:text="@string/ab2text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ab1image"
        app:layout_constraintStart_toEndOf="@+id/ab1image"
        app:layout_constraintTop_toTopOf="@+id/ab1image" />

    <TextView
        android:id="@+id/ab1damage"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.6"
        android:text="@string/ab2dmg"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/ab1image"
        app:layout_constraintTop_toBottomOf="@+id/ab1text" />

</androidx.constraintlayout.widget.ConstraintLayout>